[package]
name = "pitboss-api"
version = "0.1.0"
edition = "2021"
description = "MoshSplit shared-expense platform backend"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [    "cors", "trace", "catch-panic", "set-header"] }

# Database (Diesel + r2d2)
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }

r2d2 = "0.8"

# Sentinel Auth
sentinel-client = { path = "../../packages/sentinel-client" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP body utilities (for middleware body collection)
http-body-util = "0.1"

# Environment
dotenvy = "0.15"

# Async
futures = "0.3"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
